--- a/system-test/mdbci/templates/default.json.template
+++ b/system-test/mdbci/templates/default.json.template
@@ -359,7 +359,7 @@
   "clustrix_000" :
   {
         "hostname" : "clustrix000",
-        "box" : "centos_7_gcp",
+        "box" : "${clustrix_box}",
         "memory_size" : "16192",
         "labels" : [
                 "CLUSTRIX_BACKEND"
@@ -369,7 +369,7 @@
   "clustrix_001" :
   {
         "hostname" : "clustrix001",
-        "box" : "centos_7_gcp",
+        "box" : "${clustrix_box}",
         "memory_size" : "16192",
         "labels" : [
                 "CLUSTRIX_BACKEND"
@@ -379,7 +379,7 @@
   "clustrix_002" :
   {
         "hostname" : "clustrix002",
-        "box" : "centos_7_gcp",
+        "box" : "${clustrix_box}",
         "memory_size" : "16192",
         "labels" : [
                 "CLUSTRIX_BACKEND"
@@ -390,9 +390,75 @@
   {
         "hostname" : "clustrix003",
         "memory_size" : "16192",
-        "box" : "centos_7_gcp",
+        "box" : "${clustrix_box}",
         "labels" : [
                 "CLUSTRIX_BACKEND"
+        ]
+  },
+
+  "columnstore_000" :
+  {
+        "hostname" : "columnstore000",
+        "box" : "${columnstore_box}",
+        "memory_size" : "${vm_memory}",
+        "products": [
+            {
+                "name": "${product}",
+                "version": "${version}",
+		"cnf_template": "server1.cnf",
+                "cnf_template_path": "${cnf_path}"
+            },
+            {
+                "name": "mdbe_plugin_columnstore",
+                "version": "${version}"
+            }
+        ],
+        "labels" : [
+                "COLUMNSTORE_BACKEND"
+        ]
+  },
+
+  "columnstore_001" :
+  {
+        "hostname" : "columnstore001",
+        "box" : "${columnstore_box}",
+        "memory_size" : "${vm_memory}",
+        "products": [
+            {
+                "name": "${product}",
+                "version": "${version}",
+		"cnf_template": "server2.cnf",
+                "cnf_template_path": "${cnf_path}"
+            },
+            {
+                "name": "mdbe_plugin_columnstore",
+                "version": "${version}"
+            }
+        ],
+        "labels" : [
+                "COLUMNSTORE_BACKEND"
+        ]
+  },
+
+  "columnstore_002" :
+  {
+        "hostname" : "columnstore002",
+        "box" : "${columnstore_box}",
+        "memory_size" : "${vm_memory}",
+        "products": [
+            {
+                "name": "${product}",
+                "version": "${version}",
+		"cnf_template": "server3.cnf",
+                "cnf_template_path": "${cnf_path}"
+            },
+            {
+                "name": "mdbe_plugin_columnstore",
+                "version": "${version}"
+            }
+        ],
+        "labels" : [
+                "COLUMNSTORE_BACKEND"
         ]
   }
 }
